crates/test-framework/src/snapshot/snapshots/explain/test_framework__snapshot__mysql_tpch_simple_q5_explain.snap
---
source: crates/test-framework/src/snapshot/mod.rs
description: "Query: tpch_simple_q5"
---
+---------------+--------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+
| plan_type     | plan                                                                                                                                                                                                                                                                                                                                                                                                                                                                                             |
+---------------+--------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+
| logical_plan  | BytesProcessedNode                                                                                                                                                                                                                                                                                                                                                                                                                                                                               |
|               |   Federated                                                                                                                                                                                                                                                                                                                                                                                                                                                                                      |
|               |  Sort: total_price DESC NULLS FIRST                                                                                                                                                                                                                                                                                                                                                                                                                                                              |
|               |   Projection: sum(o.o_totalprice) AS total_price, l.l_linestatus                                                                                                                                                                                                                                                                                                                                                                                                                                 |
|               |     Aggregate: groupBy=[[l.l_linestatus]], aggr=[[sum(o.o_totalprice)]]                                                                                                                                                                                                                                                                                                                                                                                                                          |
|               |       Inner Join:  Filter: o.o_orderkey = l.l_orderkey                                                                                                                                                                                                                                                                                                                                                                                                                                           |
|               |         SubqueryAlias: o                                                                                                                                                                                                                                                                                                                                                                                                                                                                         |
|               |           TableScan: orders projection=[o_orderkey, o_totalprice]                                                                                                                                                                                                                                                                                                                                                                                                                                |
|               |         SubqueryAlias: l                                                                                                                                                                                                                                                                                                                                                                                                                                                                         |
|               |           TableScan: lineitem projection=[l_orderkey, l_linestatus]                                                                                                                                                                                                                                                                                                                                                                                                                              |
| physical_plan | BytesProcessedExec                                                                                                                                                                                                                                                                                                                                                                                                                                                                               |
|               |   SchemaCastScanExec                                                                                                                                                                                                                                                                                                                                                                                                                                                                             |
|               |     VirtualExecutionPlan name=mysql compute_context=<CONNECTION> sql=SELECT sum(o.o_totalprice) AS total_price, l.l_linestatus FROM orders AS o JOIN lineitem AS l ON (o.o_orderkey = l.l_orderkey) GROUP BY l.l_linestatus ORDER BY total_price DESC NULLS FIRST rewritten_sql=SELECT sum(`o`.`o_totalprice`) AS `total_price`, `l`.`l_linestatus` FROM `orders` AS `o` JOIN `lineitem` AS `l` ON (`o`.`o_orderkey` = `l`.`l_orderkey`) GROUP BY `l`.`l_linestatus` ORDER BY `total_price` DESC |
|               |                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                  |
+---------------+--------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+
