crates/test-framework/src/snapshot/snapshots/explain/test_framework__snapshot__mysql_tpch_simple_q7_explain.snap
---
source: crates/test-framework/src/snapshot/mod.rs
description: "Query: tpch_simple_q7"
---
+---------------+------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+
| plan_type     | plan                                                                                                                                                                                                                                                                         |
+---------------+------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+
| logical_plan  | BytesProcessedNode                                                                                                                                                                                                                                                           |
|               |   Federated                                                                                                                                                                                                                                                                  |
|               |  Limit: skip=0, fetch=10                                                                                                                                                                                                                                                     |
|               |   Projection: c.key                                                                                                                                                                                                                                                          |
|               |     SubqueryAlias: c                                                                                                                                                                                                                                                         |
|               |       Projection: orders.o_orderkey AS key                                                                                                                                                                                                                                   |
|               |         Limit: skip=0, fetch=10                                                                                                                                                                                                                                              |
|               |           Projection: orders.o_orderkey                                                                                                                                                                                                                                      |
|               |             TableScan: orders projection=[o_orderkey]                                                                                                                                                                                                                        |
| physical_plan | BytesProcessedExec                                                                                                                                                                                                                                                           |
|               |   SchemaCastScanExec                                                                                                                                                                                                                                                         |
|               |     VirtualExecutionPlan name=mysql compute_context=<CONNECTION> sql=SELECT c."key" FROM (SELECT orders.o_orderkey FROM orders LIMIT 10) AS c (key) LIMIT 10 rewritten_sql=SELECT `c`.`key` FROM (SELECT `orders`.`o_orderkey` FROM `orders` LIMIT 10) AS `c` (key) LIMIT 10 |
|               |                                                                                                                                                                                                                                                                              |
+---------------+------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+
